--- a/DrawGraph.vcxproj.filters
+++ b/DrawGraph.vcxproj.filters
@@ -54,6 +54,15 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CAET.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CBucket.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CFill.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DrawGraph.cpp">
@@ -84,6 +93,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CAET.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CBucket.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CFill.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
